Fallback to sub-aggregation if composite aggregation doesn't support (#4413)
* Fallback to sub-aggregation if composite aggregation doesn't support

Signed-off-by: Heng Qian <qianheng@amazon.com>

* merging main

Signed-off-by: Heng Qian <qianheng@amazon.com>

* Address comments

Signed-off-by: Heng Qian <qianheng@amazon.com>

* Address comments

Signed-off-by: Heng Qian <qianheng@amazon.com>

---------

Signed-off-by: Heng Qian <qianheng@amazon.com>

(cherry picked from commit abd5bd3337af63892ff8ee762ad3c5902fa87b2a)
Signed-off-by: Heng Qian <qianheng@amazon.com>