@@ -127,6 +127,12 @@ public class AggregateAnalyzer {
     }
   }
 
+  public static class CompositeAggUnSupportedException extends RuntimeException {
+    CompositeAggUnSupportedException(String message) {
+      super(message);
+    }
+  }
+
   private AggregateAnalyzer() {}
 
   @RequiredArgsConstructor
@@ -209,74 +215,53 @@ public class AggregateAnalyzer {
       // both count() and count(FIELD) can apply doc_count optimization in non-bucket aggregation,
       // but only count() can apply doc_count optimization in bucket aggregation.
       boolean countAllOnly = !aggregate.getGroupSet().isEmpty();
-      Pair<List<ValueCountAggregationBuilder>, Builder> pair =
+      Pair<List<String>, Builder> countAggNameAndBuilderPair =
           removeCountAggregationBuilders(metricBuilder, countAllOnly);
-      List<ValueCountAggregationBuilder> removedCountAggBuilders = pair.getLeft();
-      Builder newMetricBuilder = pair.getRight();
+      Builder newMetricBuilder = countAggNameAndBuilderPair.getRight();
+      List<String> countAggNames = countAggNameAndBuilderPair.getLeft();
 
-      boolean removedCountAggBuildersHaveSomeField =
-          removedCountAggBuilders.stream()
-                  .map(ValuesSourceAggregationBuilder::fieldName)
-                  .distinct()
-                  .count()
-              == 1;
-      boolean allCountAggRemoved =
-          removedCountAggBuilders.size() == metricBuilder.getAggregatorFactories().size();
       if (aggregate.getGroupSet().isEmpty()) {
-        if (allCountAggRemoved && removedCountAggBuildersHaveSomeField) {
+        if (newMetricBuilder == null) {
           // The optimization must require all count aggregations are removed,
           // and they have only one field name
-          List<String> countAggNameList =
-              removedCountAggBuilders.stream()
-                  .map(ValuesSourceAggregationBuilder::getName)
-                  .collect(Collectors.toList());
-          return Pair.of(
-              ImmutableList.copyOf(newMetricBuilder.getAggregatorFactories()),
-              new CountAsTotalHitsParser(countAggNameList));
+          return Pair.of(List.of(), new CountAsTotalHitsParser(countAggNames));
         } else {
           return Pair.of(
-              ImmutableList.copyOf(metricBuilder.getAggregatorFactories()),
+              ImmutableList.copyOf(newMetricBuilder.getAggregatorFactories()),
               new NoBucketAggregationParser(metricParserList));
         }
       } else if (aggregate.getGroupSet().length() == 1
-          && isAutoDateSpan(project.getProjects().get(groupList.get(0)))) {
-        RexCall rexCall = (RexCall) project.getProjects().get(groupList.get(0));
-        String bucketName = project.getRowType().getFieldList().get(groupList.get(0)).getName();
-        RexInputRef rexInputRef = (RexInputRef) rexCall.getOperands().get(0);
-        RexLiteral valueLiteral = (RexLiteral) rexCall.getOperands().get(1);
-        ValuesSourceAggregationBuilder<?> bucketBuilder =
-            new AutoDateHistogramAggregationBuilder(bucketName)
-                .field(helper.inferNamedField(rexInputRef).getRootName())
-                .setNumBuckets(requireNonNull(valueLiteral.getValueAs(Integer.class)));
+          && isAutoDateSpan(project.getProjects().get(groupList.getFirst()))) {
+        ValuesSourceAggregationBuilder<?> bucketBuilder = createBucket(0, project, helper);
+        if (newMetricBuilder != null) {
+          bucketBuilder.subAggregations(newMetricBuilder);
+        }
         return Pair.of(
-            Collections.singletonList(bucketBuilder.subAggregations(metricBuilder)),
-            new BucketAggregationParser(metricParserList));
+            Collections.singletonList(bucketBuilder),
+            new BucketAggregationParser(metricParserList, countAggNames));
       } else {
-        List<CompositeValuesSourceBuilder<?>> buckets =
-            createCompositeBuckets(groupList, project, helper);
-        AggregationBuilder aggregationBuilder =
-            AggregationBuilders.composite("composite_buckets", buckets)
-                .size(AGGREGATION_BUCKET_SIZE);
-
-        // For bucket aggregation, no count() aggregator or not all aggregators are count(),
-        // fallback to original ValueCountAggregation.
-        if (removedCountAggBuilders.isEmpty()
-            || removedCountAggBuilders.size() != metricBuilder.getAggregatorFactories().size()) {
-          aggregationBuilder.subAggregations(metricBuilder);
+        AggregationBuilder aggregationBuilder;
+        try {
+          List<CompositeValuesSourceBuilder<?>> buckets =
+              createCompositeBuckets(groupList, project, helper);
+          aggregationBuilder =
+              AggregationBuilders.composite("composite_buckets", buckets)
+                  .size(AGGREGATION_BUCKET_SIZE);
+          if (newMetricBuilder != null) {
+            aggregationBuilder.subAggregations(metricBuilder);
+          }
           return Pair.of(
               Collections.singletonList(aggregationBuilder),
-              new CompositeAggregationParser(metricParserList));
+              new CompositeAggregationParser(metricParserList, countAggNames));
+        } catch (CompositeAggUnSupportedException e) {
+          if (bucketNullable) {
+            throw new UnsupportedOperationException(e.getMessage());
+          }
+          aggregationBuilder = createNestedBuckets(groupList, project, newMetricBuilder, helper);
+          return Pair.of(
+              Collections.singletonList(aggregationBuilder),
+              new BucketAggregationParser(metricParserList, countAggNames));
         }
-        // No need to register sub-factories if no aggregator factories left after removing all
-        // ValueCountAggregationBuilder.
-        if (!newMetricBuilder.getAggregatorFactories().isEmpty()) {
-          aggregationBuilder.subAggregations(newMetricBuilder);
-        }
-        List<String> countAggNameList =
-            removedCountAggBuilders.stream().map(ValuesSourceAggregationBuilder::getName).collect(Collectors.toList());
-        return Pair.of(
-            Collections.singletonList(aggregationBuilder),
-            new CompositeAggregationParser(metricParserList, countAggNameList));
       }
     } catch (Throwable e) {
       Throwables.throwIfInstanceOf(e, UnsupportedOperationException.class);
@@ -285,14 +270,16 @@ public class AggregateAnalyzer {
   }
 
   /**
-   * Remove all ValueCountAggregationBuilder from metric builder, and return the removed
-   * ValueCountAggregationBuilder list.
+   * Remove all ValueCountAggregationBuilder from metric builder, and return the name list for the
+   * removed count aggs with the updated metric builder.
    *
    * @param metricBuilder metrics builder
    * @param countAllOnly remove count() only, or count(FIELD) will be removed.
-   * @return a pair of removed ValueCountAggregationBuilder and updated metric builder
+   * @return a pair of name list for the removed count aggs and updated metric builder. If the count
+   *     aggregations cannot satisfy the requirement to remove, it will return an empty name list
+   *     with the original metric builder.
    */
-  private static Pair<List<ValueCountAggregationBuilder>, Builder> removeCountAggregationBuilders(
+  private static Pair<List<String>, Builder> removeCountAggregationBuilders(
       Builder metricBuilder, boolean countAllOnly) {
     List<ValueCountAggregationBuilder> countAggregatorFactories =
         metricBuilder.getAggregatorFactories().stream()
@@ -305,7 +292,26 @@ public class AggregateAnalyzer {
     copy.removeAll(countAggregatorFactories);
     Builder newMetricBuilder = new AggregatorFactories.Builder();
     copy.forEach(newMetricBuilder::addAggregator);
-    return Pair.of(countAggregatorFactories, newMetricBuilder);
+
+    if (countAllOnly || supportCountFiled(countAggregatorFactories, metricBuilder)) {
+      List<String> countAggNameList =
+          countAggregatorFactories.stream().map(ValuesSourceAggregationBuilder::getName).toList();
+      if (newMetricBuilder.getAggregatorFactories().isEmpty()) {
+        newMetricBuilder = null;
+      }
+      return Pair.of(countAggNameList, newMetricBuilder);
+    }
+    return Pair.of(List.of(), metricBuilder);
+  }
+
+  private static boolean supportCountFiled(
+      List<ValueCountAggregationBuilder> countAggBuilderList, Builder metricBuilder) {
+    return countAggBuilderList.size() == metricBuilder.getAggregatorFactories().size()
+        && countAggBuilderList.stream()
+                .map(ValuesSourceAggregationBuilder::fieldName)
+                .distinct()
+                .count()
+            == 1;
   }
 
   private static Pair<Builder, List<MetricParser>> processAggregateCalls(
@@ -342,7 +348,7 @@ public class AggregateAnalyzer {
       AggregateCall aggCall,
       List<RexNode> args,
       String aggFieldName,
-      AggregateBuilderHelper helper) {
+      AggregateAnalyzer.AggregateBuilderHelper helper) {
     if (aggCall.isDistinct()) {
       return createDistinctAggregation(aggCall, args, aggFieldName, helper);
     } else {
@@ -524,17 +530,30 @@ public class AggregateAnalyzer {
         || coreType == ExprCoreType.TIMESTAMP;
   }
 
-  private static ValuesSourceAggregationBuilder<?> createBucketAggregation(
-      Integer group, Project project, AggregateAnalyzer.AggregateBuilderHelper helper) {
-    return createBucket(group, project, helper);
-  }
-
   private static List<CompositeValuesSourceBuilder<?>> createCompositeBuckets(
       List<Integer> groupList, Project project, AggregateAnalyzer.AggregateBuilderHelper helper) {
     ImmutableList.Builder<CompositeValuesSourceBuilder<?>> resultBuilder = ImmutableList.builder();
     groupList.forEach(
         groupIndex -> resultBuilder.add(createCompositeBucket(groupIndex, project, helper)));
     return resultBuilder.build();
+  }
+
+  private static ValuesSourceAggregationBuilder<?> createNestedBuckets(
+      List<Integer> groupList,
+      Project project,
+      Builder metricBuilder,
+      AggregateAnalyzer.AggregateBuilderHelper helper) {
+    ValuesSourceAggregationBuilder<?> rootAgg = createBucket(groupList.get(0), project, helper);
+    ValuesSourceAggregationBuilder<?> currentAgg = rootAgg;
+    for (int i = 1; i < groupList.size(); i++) {
+      ValuesSourceAggregationBuilder<?> nextAgg = createBucket(groupList.get(i), project, helper);
+      currentAgg.subAggregations(new AggregatorFactories.Builder().addAggregator(nextAgg));
+      currentAgg = nextAgg;
+    }
+    if (metricBuilder != null) {
+      currentAgg.subAggregations(metricBuilder);
+    }
+    return rootAgg;
   }
 
   private static boolean isAutoDateSpan(RexNode rex) {
@@ -559,13 +578,21 @@ public class AggregateAnalyzer {
           helper.inferNamedField(((RexCall) rex).getOperands().get(0)).getRootName(),
           ((RexLiteral)((RexCall) rex).getOperands().get(1)).getValueAs(Double.class),
           SpanUnit.of(((RexLiteral)((RexCall) rex).getOperands().get(2)).getValueAs(String.class)));
+    } else if (isAutoDateSpan(rex)) {
+      RexCall rexCall = (RexCall) rex;
+      RexInputRef rexInputRef = (RexInputRef) rexCall.getOperands().getFirst();
+      RexLiteral valueLiteral = (RexLiteral) rexCall.getOperands().get(1);
+      return new AutoDateHistogramAggregationBuilder(bucketName)
+          .field(helper.inferNamedField(rexInputRef).getRootName())
+          .setNumBuckets(requireNonNull(valueLiteral.getValueAs(Integer.class)));
     } else {
       return createTermsAggregationBuilder(bucketName, rex, helper);
     }
   }
 
   private static CompositeValuesSourceBuilder<?> createCompositeBucket(
-      Integer groupIndex, Project project, AggregateAnalyzer.AggregateBuilderHelper helper) {
+      Integer groupIndex, Project project, AggregateAnalyzer.AggregateBuilderHelper helper)
+      throws CompositeAggUnSupportedException {
     RexNode rex = project.getProjects().get(groupIndex);
     String bucketName = project.getRowType().getFieldList().get(groupIndex).getName();
     if (rex instanceof RexCall
@@ -583,8 +610,7 @@ public class AggregateAnalyzer {
           MissingOrder.FIRST,
           helper.bucketNullable);
     } else if (isAutoDateSpan(rex)) {
-      // Defense check. We've already prevented this case in OpenSearchAggregateIndexScanRule.
-      throw new UnsupportedOperationException(
+      throw new CompositeAggUnSupportedException(
           "auto_date_histogram is not supported in composite agg.");
     } else {
       return createTermsSourceBuilder(bucketName, rex, helper);
